Fix(search): works for blank search terms. can search by location, category and type. Added category and type to job model and register job. Updated yammel
