# api/swagger.yaml
@@ -557,6 +557,10 @@ definitions:
         type: "string"
       project_description:
         type: "string"
+      project_category:
+        type: "string"
+      project_type:
+        type: "string"
       project_location:
         type: "string"
       project_photos:
@@ -654,7 +658,7 @@ definitions:
   ViewJob:
     type: "object"
     properties:
-      user_id:
+      job_id:
         type: "string"
       session_token:
         type: "string"
